--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,7 @@ edition = "2021"
 [dependencies]
 aes-gcm = "0.10.3"
 blake3 = "1.5.3"
-tokio = { version = "1.40.0", features = ["full"] }
+tokio = { version = "1.40.0", features = ["macros", "rt-multi-thread", "sync", "process", "io-util", "time"] }
 vulkano = "0.34.0"
 crossterm = "0.28.1"
 ratatui = "0.28.1"
